# web-scraped-data-pipeline

./: .cursorrules  .gitignore  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  README.md  commit.sh  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh
contracts/: product_schema.json
dags/: product_pipeline_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: dim_product.sql  fact_price_history.sql
great_expectations/: DATA_QUALITY_README.md  great_expectations.yml
great_expectations/expectations/: raw_product_suite.json  silver_product_suite.json
great_expectations/expectations/raw/: product_completeness_suite.json  product_consistency_suite.json  product_uniqueness_suite.json
src/: run_pipeline.py  scraper.py  setup_great_expectations.py  transform.py  validate.py
src/monitoring/: metrics.py
streamlit_app/: dashboard.py  dq_dashboard.py
